<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCarActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarActivityEditCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/backButtonActivityEditCar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@color/primary"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_back_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/car_info"
                android:textSize="24sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/backButtonActivityEditCar"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/addButtonActivityEditCar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@color/primary"
                android:contentDescription="@string/add_car"
                android:src="@drawable/ic_submit_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/backgroundActivityEditCar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/no_image"
        android:src="@drawable/ic_background_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBarActivityEditCar" />

    <TextView
        android:id="@+id/tvNoPhotoActivityEditCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_image"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/backgroundActivityEditCar"
        app:layout_constraintEnd_toEndOf="@id/backgroundActivityEditCar"
        app:layout_constraintStart_toStartOf="@id/backgroundActivityEditCar"
        app:layout_constraintTop_toTopOf="@id/backgroundActivityEditCar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backgroundActivityEditCar">

        <EditText
            android:id="@+id/etOwnerNameActivityEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/owner_name"
            android:background="@color/white"
            android:backgroundTint="@color/accent"
            android:backgroundTintMode="screen"
            android:hint="@string/owner_name"
            android:inputType="textPersonName"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout1">

        <EditText
            android:id="@+id/etProducerActivityEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/producer"
            android:background="@color/white"
            android:backgroundTint="@color/accent"
            android:backgroundTintMode="screen"
            android:hint="@string/producer"
            android:inputType="text"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout1">

        <EditText
            android:id="@+id/etModelActivityEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:autofillHints="@string/model"
            android:background="@color/white"
            android:backgroundTintMode="screen"
            android:hint="@string/model"
            android:inputType="text"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout2">

        <EditText
            android:id="@+id/etPlateNumberActivityEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:autofillHints="@string/plate_number"
            android:background="@color/white"
            android:backgroundTintMode="screen"
            android:hint="@string/plate_number"
            android:inputType="text"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/photoActionButtonActivityEditCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/purple_500"
        android:contentDescription="@string/take_a_photo"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@id/backgroundActivityEditCar"
        app:layout_constraintEnd_toEndOf="@id/backgroundActivityEditCar"
        app:layout_constraintTop_toBottomOf="@id/backgroundActivityEditCar" />

</androidx.constraintlayout.widget.ConstraintLayout>


